[package]
name = "dwarf-playground"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3"
gimli = { version = "0.26.1", default-features = false, features = ["std", "read"] }
memmap = "0.7.0"
object = { version = "0.28", default-features = false, features = ["std", "read_core", "elf", "pe"] }
